--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,10 @@
-server.port=8091
+server.port=${APP.PORT}
 spring.mvc.pathmatch.matching-strategy: ANT_PATH_MATCHER
 
-#Local
-#mongo.collection=cliente-imagen
-#spring.data.mongodb.uri=mongodb://localhost:27017/practica
-#mongo.pool.max-size=50
-#mongo.pool.min-size=10
-#mongo.show-log=true
 
-#Remoto
-mongo.collection=usuario
-spring.data.mongodb.uri=mongodb+srv://admin:admin@cluster0.xszni.mongodb.net/?retryWrites=true&w=majority
-spring.data.mongodb.database=curso
+mongo.collection=${MONGODB.COLLECTION}
+spring.data.mongodb.uri=${MONGODB.URI}
+spring.data.mongodb.database=${MONGODB.DATABASE}
 mongo.pool.max-size=50
 mongo.pool.min-size=10
 mongo.show-log=true
