--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,16 @@
-server.port=${APP.PORT}
-spring.mvc.pathmatch.matching-strategy: ANT_PATH_MATCHER
+server.port=8091
+spring.application.name=service-image
+spring.config.import=configserver:http://localhost:8092
+spring.cloud.config.username=root
+spring.cloud.config.password=passw0rd
 
-
-mongo.collection=${MONGODB.COLLECTION}
-spring.data.mongodb.uri=${MONGODB.URI}
-spring.data.mongodb.database=${MONGODB.DATABASE}
-mongo.pool.max-size=50
-mongo.pool.min-size=10
-mongo.show-log=true
+#server.port=${APP.PORT}
+#spring.mvc.pathmatch.matching-strategy: ANT_PATH_MATCHER
+#
+#
+#mongo.collection=${MONGODB.COLLECTION}
+#spring.data.mongodb.uri=${MONGODB.URI}
+#spring.data.mongodb.database=${MONGODB.DATABASE}
+#mongo.pool.max-size=50
+#mongo.pool.min-size=10
+#mongo.show-log=true
