feat: Se añade eureka-server.

--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,6 @@
 	<properties>
 		<java.version>11</java.version>
 		<spring-cloud.version>2021.0.3</spring-cloud.version>
-		<spring-cloud.version>2021.0.3</spring-cloud.version>
 		<mapstruct.version>1.4.2.Final</mapstruct.version>
 		<lombok.version>1.18.8</lombok.version>
 		<jacoco.version>0.8.4</jacoco.version>
@@ -35,15 +34,23 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-		<!-- <dependency> -->
-		<!-- <groupId>org.springframework.cloud</groupId> -->
-		<!-- <artifactId>spring-cloud-starter-config</artifactId> -->
-		<!-- </dependency> -->
-		<!-- <dependency> -->
-		<!-- <groupId>org.springframework.cloud</groupId> -->
-		<!-- <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId> -->
-		<!-- </dependency> -->
-
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-config</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-config</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+		</dependency>
+		>>>>>>> Stashed changes
 		<dependency>
 			<groupId>io.springfox</groupId>
 			<artifactId>springfox-swagger2</artifactId>
@@ -133,17 +140,17 @@
 						<exclude>com/co/pragma/**/domain/model/gateways/*</exclude>
 						<!-- Exception Domain -->
 						<exclude>com/co/pragma/**/domain/exceptions/*</exclude>
-						<!-- Driver Adapters MySQL Infraestructure-->
+						<!-- Driver Adapters MySQL Infraestructure -->
 						<exclude>com/co/pragma/**/infraestructure/driveradapters/mongo/*</exclude>
-						<!-- Driver Adapters Mappers Infraestructure-->
+						<!-- Driver Adapters Mappers Infraestructure -->
 						<exclude>com/co/pragma/**/infraestructure/driveradapters/mappers/*</exclude>
-						<!-- Driver Adapters Api Infraestructure-->
+						<!-- Driver Adapters Api Infraestructure -->
 						<exclude>com/co/pragma/**/infraestructure/driveradapters/api/*</exclude>
-						<!-- Exceptions Infraestructure-->
+						<!-- Exceptions Infraestructure -->
 						<exclude>com/co/pragma/**/infraestructure/exceptions/*</exclude>
-						<!-- Utils Infraestructure-->
+						<!-- Utils Infraestructure -->
 						<exclude>com/co/pragma/**/infraestructure/utils/*</exclude>
-						<!-- Models Infraestructure-->
+						<!-- Models Infraestructure -->
 						<exclude>com/co/pragma/**/infraestructure/entrypoints/api/models/*</exclude>
 					</excludes>
 				</configuration>
